--- a/style.css
+++ b/style.css
@@ -63,11 +63,35 @@ body {
 }
 
 .card {
-  padding: 20px 0;
+  /* padding: 20px 0; */
   border-radius: 10px;
   width: 250px;
   display: flex;
+  align-items: center;
+  flex-direction: column;
   background-color: white;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
   margin: 10px;
+}
+
+.card > h3 {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.image-container {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 150px;
+}
+
+.menu-desc-short {
+  margin: 5px 20px 20px 20px;
+}
+
+.menu-price {
+  font-size: 20px;
+  margin-bottom: 5px;
 }
